--- a/app/blocks/panelPrzystanki/_panelPrzystanki.sass
+++ b/app/blocks/panelPrzystanki/_panelPrzystanki.sass
@@ -141,10 +141,56 @@
       &:hover
         i
           color: #2196F3
+          position: relative
         i.-red
           color: red
         i.-green
           color: green
+      .tool-tip
+        color: #fff
+        min-width: 100px
+        background-color: #2196F3
+        text-shadow: none
+        font-size: .8em
+        visibility: hidden
+        border-radius: 7px
+        text-align: center
+        opacity: 0
+        z-index: 999
+        padding: 3px 8px
+        position: absolute
+        cursor: default
+      .tool-tip.top:after,.tool-tip:after
+        position: absolute
+        bottom: -12px
+        left: 50%
+        margin-left: -7px
+        content: ' '
+        height: 0
+        width: 0
+        border: 6px solid transparent
+        border-top-color: #2196F3
+      .tool-tip.tool-tip.top
+        width: 80px
+        height: 22px
+        margin-left: -43px
+      .tool-tip.left
+        top: 50%
+        left: auto
+        right: 170%
+        margin-top: -15px
+        margin-left: auto
+      .tool-tip.left:after
+        left: auto
+        right: -12px
+        top: 50%
+        margin-top: -6px
+        bottom: auto
+        border-top-color: transparent
+        border-left-color: #2196F3
+      *:not(.on-focus):hover > .tool-tip,.on-focus input:focus + .tool-tip
+        visibility: visible
+        opacity: 1
 
   &__navigation
     margin-bottom: 5px
