--- a/app/jade/_header.jade
+++ b/app/jade/_header.jade
@@ -30,7 +30,7 @@
             span.header__buttonIconBG
               .header__buttonIcon.fa.fa-users
             | Użytkownicy
-      li.header__item
+      li.header__item(ng-hide="true")
         a(href="#/controls")
           span.header__button
             span.header__buttonIconBG
@@ -56,7 +56,7 @@
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-sign-in
             | Rejestracja
-      li.headerProfile__item(ng-hide="globals.UserIsLogin")
+      li.headerProfile__item(ng-hide="true")
         a(href="/#/forgot")
           span.headerProfile__button
             span.headerProfile__buttonIconBG
