--- a/app/jade/_header.jade
+++ b/app/jade/_header.jade
@@ -62,7 +62,7 @@
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-key
             | Odzyskaj konto
-      li.headerProfile__item(ng-hide="globals.HeaderToHide")
+      li.headerProfile__item(ng-hide="true")
         a(href="/#/myaccount")
           span.headerProfile__button
             span.headerProfile__buttonIconBG
