--- a/app/jade/panelUsers.jade
+++ b/app/jade/panelUsers.jade
@@ -9,9 +9,8 @@
       a(href="/#/user") Zarządzanie Użytkownikami
   .panelUsers__wrapper
     .panelUsers__subtitle Użytkownicy Systemu
-    .panelUsers__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
     .panelUsers__navigation
-      a(href="/#/user/add").panelUsers__navigation__item Dodaj Użytkownika
+      //a(href="/#/user/add").panelUsers__navigation__item Dodaj Użytkownika
     .panelUsers__filtrs
       .panelUsers__filtr
         label Email
@@ -22,7 +21,7 @@
           option(value="") Ranga
           option(value=0) Użytkownik
           option(value=1) Kontroler
-          option(value=2) Administrator
+          option(value=3) Administrator
       .panelUsers__filtr
         label Status
         select(ng-model="userFilter.Activated")
@@ -35,36 +34,35 @@
             th Email
             th Ranga
             th Status
-            th Zarządzanie
+            //th Zarządzanie
           tr(ng-repeat="user in users | filter:userFilter | filter:{ Activated: '!false'} as filtrowaneUsers")
             td {{ user.Email }}
             td {{ user.RankName }}
             td {{ user.StatusName }}
-            td
-              a(href="/#/user/show/{{ user.Id }}").navigation
-                i.ionicons.ion-settings
-              a(href="/#/user/delete/{{ user.Id }}").navigation
-                i.ionicons.ion-android-cancel.-red
+            //td
+            //  a(href="/#/user/show/{{ user.Id }}").navigation
+            //    i.ionicons.ion-settings
+            //  a(href="/#/user/delete/{{ user.Id }}").navigation
+            //    i.ionicons.ion-android-cancel.-red
           tr(ng-hide="filtrowaneUsers.length")
             td(colspan="4").-alert Brak wpisów, proszę zmienić kryteria wyszukiwania.
     .panelUsers__subtitle Nieaktywni Użytkownicy
-    .panelUsers__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
     .panelUsers__table
       table.responsive(wt-responsive-table ng-controller="UserController")
         tr
           th Email
           th Ranga
           th Status
-          th Zarządzanie
+          //th Zarządzanie
         tr(ng-repeat="user in users | filter:userFilter | filter:{ Activated: 'false'} as filtrowaneUsersNieaktywni")
           td {{ user.Email }}
           td {{ user.RankName }}
           td {{ user.StatusName }}
-          td
-            a(href="/#/user/show/{{ user.Id }}").navigation
-              i.ionicons.ion-settings
-            a(href="/#/user/delete/{{ user.Id }}").navigation
-              i.ionicons.ion-android-cancel.-red
+          //td
+          //  a(href="/#/user/show/{{ user.Id }}").navigation
+          //    i.ionicons.ion-settings
+          //  a(href="/#/user/delete/{{ user.Id }}").navigation
+          //    i.ionicons.ion-android-cancel.-red
         tr(ng-hide="filtrowaneUsersNieaktywni.length")
           td(colspan="4").-alert Brak wpisów, proszę zmienić kryteria wyszukiwania.
 
