--- a/app/blocks/panelDodajTrase/_panelDodajTrase.sass
+++ b/app/blocks/panelDodajTrase/_panelDodajTrase.sass
@@ -13,7 +13,7 @@
     margin: 3px 0
     padding: 10px
     border-radius: 7px
-    background-color: #00b3ee
+    background-color: #2196F3
     color: white
     cursor: default
     &.-mainBusstop
@@ -24,12 +24,12 @@
     width: 100%
     display: block
     background-color: darkred
-    border-radius: 4px
+    //border-radius: 4px
     color: white
     font-weight: 700
     text-align: center
     padding: 10px 5px
-    max-width: 150px
+    //max-width: 150px
     margin: 0 auto
     cursor: pointer
     &:hover
@@ -37,12 +37,12 @@
   &__buttonToSave
     width: 100%
     display: block
-    border-radius: 4px
+    //border-radius: 4px
     color: white
     font-weight: 700
     text-align: center
     padding: 10px 5px
-    max-width: 150px
+    //max-width: 150px
     margin: 0 auto
     background: #00a65a
     cursor: pointer
@@ -53,3 +53,31 @@
     padding: 5px 20px 20px
     font-weight: 400
     color: #00b3ee
+  &__content
+    //border-top: 2px solid #D2E3E9
+    padding-top: 15px
+    &__form
+      display: flex
+      flex-wrap: wrap
+      justify-content: flex-start
+      &__item
+        &.check
+          flex-basis: auto
+          text-align: center
+          margin-right: 2px
+        overflow: hidden
+        flex-basis: 33%
+        padding: 10px
+        margin: 5px 0
+        +PHONE_ONLY
+          flex-basis: 100%
+      input, select
+        width: 100%
+        height: 40px
+        border-radius: 4px
+        border: none
+        border-bottom: 1px solid rgba(128, 128, 128, 0.6)
+        outline: none
+        padding: 8px
+        background-color: transparent
+        box-shadow: none
