--- a/app/css/main.css
+++ b/app/css/main.css
@@ -14332,7 +14332,7 @@ a.tabnav-extra:hover {
   margin: 3px 0;
   padding: 10px;
   border-radius: 7px;
-  background-color: #00b3ee;
+  background-color: #2196F3;
   color: white;
   cursor: default;
 }
@@ -14349,12 +14349,10 @@ a.tabnav-extra:hover {
   width: 100%;
   display: block;
   background-color: darkred;
-  border-radius: 4px;
   color: white;
   font-weight: 700;
   text-align: center;
   padding: 10px 5px;
-  max-width: 150px;
   margin: 0 auto;
   cursor: pointer;
 }
@@ -14366,12 +14364,10 @@ a.tabnav-extra:hover {
 .panelDodajTrase__buttonToSave {
   width: 100%;
   display: block;
-  border-radius: 4px;
   color: white;
   font-weight: 700;
   text-align: center;
   padding: 10px 5px;
-  max-width: 150px;
   margin: 0 auto;
   background: #00a65a;
   cursor: pointer;
@@ -14386,6 +14382,53 @@ a.tabnav-extra:hover {
   padding: 5px 20px 20px;
   font-weight: 400;
   color: #00b3ee;
+}
+
+.panelDodajTrase__content {
+  padding-top: 15px;
+}
+
+.panelDodajTrase__content__form {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: start;
+      justify-content: flex-start;
+}
+
+.panelDodajTrase__content__form__item {
+  overflow: hidden;
+  -ms-flex-preferred-size: 33%;
+      flex-basis: 33%;
+  padding: 10px;
+  margin: 5px 0;
+}
+
+.panelDodajTrase__content__form__item.check {
+  -ms-flex-preferred-size: auto;
+      flex-basis: auto;
+  text-align: center;
+  margin-right: 2px;
+}
+
+@media (max-width: 767px) {
+  .panelDodajTrase__content__form__item {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+}
+
+.panelDodajTrase__content__form input, .panelDodajTrase__content__form select {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: none;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.6);
+  outline: none;
+  padding: 8px;
+  background-color: transparent;
+  box-shadow: none;
 }
 
 .panelWyswietlTrase__columns {
