--- a/app/jade/home.jade
+++ b/app/jade/home.jade
@@ -9,6 +9,16 @@
     .panelAutobusy__subtitle Witaj w naszym systemie &nbsp;
       span(ng-show="globals.UserIsLogin") {{userName}}
       span(ng-hide="globals.UserIsLogin") &nbsp {{userName}} Jestes nie zalogowany, lepiej zrób to jak najszybciej.
-
-
+    br
+    span.panelWelcome__buttonIconBG
+      .panelWelcome__buttonIcon.fa.fa-bus
+    .panelWelcome__title Witaj w systemie MPK
+    .panelDodajUser__text System monitorowania i zarządzania flotą autobusów obejmuje cały tabor zarządzany przez MPK. Dostarcza informacji o stanie i aktualnym położeniu pojazdów.
+      br
+      br
+      b Główne funkcjonalności:
+      ul
+        li * Zarządzanie flotą autobusów
+        li * Monitorowanie stanu i położenia pojazdów w czasie rzeczywitym
+        li * Zgłaszanie incydentów zaistniałych w trakcie kursów
 
