--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -21,7 +21,7 @@ html(lang="pl" ng-app="app")
               span.panelWelcome__buttonIconBG
                 .panelWelcome__buttonIcon.fa.fa-bus
               .panelWelcome__title Witaj w systemie MPK
-              .panelWelcome__text Projekt zespołowy.
+              .panelWelcome__text Projekt zespołowy
             .panelWelcome__navigation
               //<a href="#" style="display:block;">Link #01</a>
               a(href="#/login").WelcomeClick.blue Logowanie
