--- a/app/jade/panelDodajAutobus.jade
+++ b/app/jade/panelDodajAutobus.jade
@@ -62,12 +62,14 @@
                 c-0.7,0.9-1.3,1.9-1.9,2.8c-0.5,1-1,1.9-1.4,2.8c-0.4,0.9-0.8,1.8-1,2.6c-0.3,0.9-0.5,1.6-0.7,2.4c-0.2,0.7-0.3,1.4-0.4,2.1\
                 c-0.1,0.3-0.1,0.6-0.2,0.9c0,0.3-0.1,0.6-0.1,0.8c0,0.5-0.1,0.9-0.1,1.3C10,39.6,10,40,10,40z')
               animatetransform(attributetype='xml', attributename='transform', type='rotate', from='0 40 40', to='360 40 40', dur='0.6s', repeatcount='indefinite')
-        .panelDodajAutobus__dataLoader__text
+        .panelAutobusy__dataLoader__text
           p(ng-hide="CallbackServera") {{ message }}
-          a(href="#/bus" ng-show="CallbackServeraPositive").panelDodajAutobus__navigation__item.green
-            i.fa.fa-check
-            | &nbsp;Autobus został dodany pomyślnie!
-          a(href="#/bus" ng-show="CallbackServeraNegative").panelDodajAutobus__navigation__item.red
-            i.fa.fa-reply
-            | &nbsp;Coś poszło nie tak...
+          a(href="#/bus" ng-show="CallbackServeraPositive").panelPrzystanki__text.success
+            .panelAutobusy.success__text__icon
+              i.fa.fa-smile-o
+            | Autbus został dodany pomyślnie
+          a(href="#/bus/add" ng-show="CallbackServeraNegative").panelPrzystanki__text.error
+            .panelAutobusy.success__text__icon
+              i.fa.fa-frown-o
+            | Coś poszło nie tak...
 
