--- a/app/jade/panelDodajPrzystanek.jade
+++ b/app/jade/panelDodajPrzystanek.jade
@@ -78,8 +78,14 @@
                 c-0.7,0.9-1.3,1.9-1.9,2.8c-0.5,1-1,1.9-1.4,2.8c-0.4,0.9-0.8,1.8-1,2.6c-0.3,0.9-0.5,1.6-0.7,2.4c-0.2,0.7-0.3,1.4-0.4,2.1\
                 c-0.1,0.3-0.1,0.6-0.2,0.9c0,0.3-0.1,0.6-0.1,0.8c0,0.5-0.1,0.9-0.1,1.3C10,39.6,10,40,10,40z')
               animatetransform(attributetype='xml', attributename='transform', type='rotate', from='0 40 40', to='360 40 40', dur='0.6s', repeatcount='indefinite')
-        .panelDodajPrzystanek__dataLoader__text
+        .panelPrzystanki__dataLoader__text
           p(ng-hide="CallbackServera") {{ message }}
-          a(href="/#/busstop" ng-show="CallbackServeraPositive").panelDodajPrzystanek__navigation__item.green Przystanek został dodany pomyślnie!
-          a(href="/#/bus/add" ng-show="CallbackServeraNegative").panelDodajPrzystanek__navigation__item.red Coś poszło nie tak...
+          a(href="/#/busstop" ng-show="CallbackServeraPositive").panelPrzystanki__text.success
+            .panelPrzystanki.success__text__icon
+              i.fa.fa-smile-o
+            | Przystanek został dodany pomyślnie!
+          a(href="/#/busstop/add" ng-show="CallbackServeraNegative").panelPrzystanki__text.error
+            .panelPrzystanki.success__text__icon
+              i.fa.fa-frown-o
+            | Coś poszło nie tak...
 
