--- a/app/blocks/panelDodajPrzystanek/_panelDodajPrzystanek.sass
+++ b/app/blocks/panelDodajPrzystanek/_panelDodajPrzystanek.sass
@@ -174,12 +174,21 @@
         &.ng-pristine
           border-color: rgba(128, 128, 128, 0.6)
       span.error-info
-        padding: 8px 0
+        padding: 8px 5px
         line-height: 1.2em
         color: rgba(128, 0, 2, 1)
         display: block
-
-
+        font-size: 10px
+        margin: 5px
+        text-align: justify
+      span.alert-info
+        padding: 8px 5px
+        line-height: 1.2em
+        color: #2196F3
+        display: block
+        font-size: 10px
+        margin: 5px
+        text-align: justify
   form.ng-submitted
     input,select
       &.ng-invalid
