--- a/app/blocks/panelDodajTrase/_panelDodajTrase.sass
+++ b/app/blocks/panelDodajTrase/_panelDodajTrase.sass
@@ -52,7 +52,7 @@
     text-align: center
     padding: 5px 20px 20px
     font-weight: 400
-    color: #00b3ee
+    color: rgba(128, 0, 2, 1)
   &__content
     //border-top: 2px solid #D2E3E9
     padding-top: 15px
