Ostatnia Lokalizacja autobusów, centrowanie mapy na autobus.

--- a/app/jade/home.jade
+++ b/app/jade/home.jade
@@ -1,5 +1,5 @@
 .panelAutobusy(ng-controller="HomeController")
-  .panelAutobusy__title HOME
+  .panelAutobusy__title Informacje
   .panelAutobusy__fastTravel
     span.-active
       a(href="#/")
